--- a/HSE_transport_manager/Properties/Resources.resx
+++ b/HSE_transport_manager/Properties/Resources.resx
@@ -123,4 +123,7 @@
   <data name="StatusViewModel_Stop_Bot_is_offline_message" xml:space="preserve">
     <value>Bot is offline</value>
   </data>
+  <data name="StatusViewModel_BotWork_Unknown_input_message" xml:space="preserve">
+    <value>Неизвестная комманда.</value>
+  </data>
 </root>
