Implemented taxi query

--- a/HSE_transport_manager/Properties/Resources.resx
+++ b/HSE_transport_manager/Properties/Resources.resx
@@ -163,4 +163,10 @@
     <value>Для поиска кратчайшего пути введите названия начального места и конечной точки в формате:
 Начальное место - Конечное место</value>
   </data>
+  <data name="StatusViewModel_BotWork_Uber_response_message" xml:space="preserve">
+    <value>Поездка на такси:
+{0} - {1}
+Время в пути: {2} минут(ы) 
+Стоимость поездки: {3} руб.</value>
+  </data>
 </root>
