--- a/HSE_transport_manager/Properties/Resources.resx
+++ b/HSE_transport_manager/Properties/Resources.resx
@@ -192,4 +192,16 @@
 2. Дубки
 3. Славянский Бульвар</value>
   </data>
+  <data name="ResponseBuilder_Input_separator_error_message" xml:space="preserve">
+    <value>Неверный ввод! Данные должны быть в формате Место - Место.</value>
+  </data>
+  <data name="ResponseBuilder_No_public_transport_error_message" xml:space="preserve">
+    <value>Ошибка поиска маршрута на общественном транспорте! Повторите запрос позже.</value>
+  </data>
+  <data name="ResponseBuilder_Input_data_value_error" xml:space="preserve">
+    <value>Ошибка выполнения запроса! Проверьте входные данные.</value>
+  </data>
+  <data name="ResponseBuilder_Internal_error_message" xml:space="preserve">
+    <value>Внутренняя ошибка сервера.</value>
+  </data>
 </root>
