--- a/HSE_transport_manager/Properties/Resources.resx
+++ b/HSE_transport_manager/Properties/Resources.resx
@@ -197,7 +197,8 @@
     <value>Неверный ввод! Данные должны быть в формате Место - Место.</value>
   </data>
   <data name="ResponseBuilder_No_public_transport_error_message" xml:space="preserve">
-    <value>Ошибка поиска маршрута на общественном транспорте! Повторите запрос позже.</value>
+    <value>Ошибка построения маршрута: метро не работает!
+Попробуйте повторить ваш запрос позже.</value>
   </data>
   <data name="ResponseBuilder_Input_data_value_error" xml:space="preserve">
     <value>Ошибка выполнения запроса! Проверьте входные данные.</value>
